--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@ able to contribute my strengths while also learning from others.</p>
     </div>
   </div>
 </div>
- 
+ <button>Submit</button>
   </div>
 </body>
 </html>
