--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,13 @@
 </head>
   
 <body>
+  <div style="background: #000;">
+    <p style="color:red; padding: 5px; text-align:center">Currently in Development Stage!!!</h3>
+  </div>
+
+
+
+  
   <div id='container'>
     <h1 class='text-center fw-light name'>Paras Jain</h1>
     <div class="card mb-3">
