Designed and added image

--- a/static/home.css
+++ b/static/home.css
@@ -27,3 +27,18 @@
   }
   
 }
+button{
+  margin:100vw 100vw 100vw 100vw;
+  border:none;
+  color:white;
+  background-color:grey;
+  font-size: 32px;
+  padding:15px 40px;
+  text-align:center;
+  
+}
+
+img{
+  border-radius:50%;
+  margin:24px 24px 24px 24px;
+}
