--- a/templates/home.html
+++ b/templates/home.html
@@ -15,30 +15,33 @@
     <p style="color:red; padding: 5px; text-align:center">Currently in Development Stage!!!</h3>
   </div>
 
-
-
-  
   <div id='container'>
     <h1 class='text-center fw-light name'>Paras Jain</h1>
     <div class="card mb-3">
-  <div class="row g-0 intro">
-    
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">About me</h5>
-        <p class="card-text">I am a flexible and enthusiastic software developer with good presentation skills. I am a driven individual with
-the ability to adapt to any situation and proven potential to grow myself and others. I am a keen learner and
-have the ability to remain calm in emergency situations. I value collaboration and am a skilled team player,
-able to contribute my strengths while also learning from others.</p>
+      <div class="row g-0 intro">
         
+        <div class="col-md-6" style="margin-top: 100px;">
+          <div class="card-body">
+            <h3 class="card-title">About me</h5>
+            <p class="card-text">I am a flexible and enthusiastic software developer with good presentation skills. I am a driven individual with
+    the ability to adapt to any situation and proven potential to grow myself and others. I am a keen learner and
+    have the ability to remain calm in emergency situations. I value collaboration and am a skilled team player,
+    able to contribute my strengths while also learning from others.</p>
+            
+          </div>
+        </div>
+        <div class="col-md-6 dp">
+          <img src="static/4.jpg" height=450px width=450px>
+        </div>
       </div>
     </div>
-    <div class="col-md-4 dp">
-      <img src="static/banner.jpg" width=200px height=200px class="img-fluid rounded profile" ; object-fit:cover;">
-    </div>
-  </div>
-</div>
- <button>Submit</button>
+      <div>
+        <button style="margin:10px 78px;">Experience</button>
+        <button>Education</button>
+        <button style="margin:10px 78px;">Certificates</button>
+        <button>Skills</button>
+      </div>  
+    
   </div>
 </body>
 </html>
