--- a/templates/home.html
+++ b/templates/home.html
@@ -36,6 +36,7 @@
       </div>
     </div>
       <div>
+        <a href="templates/experience.html" class="button">Go to Google</a>
         <button style="margin:10px 78px;">Experience</button>
         <button>Education</button>
         <button style="margin:10px 78px;">Certificates</button>
