--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Paras jain</title>
-  <link rel="stylesheet" href="../static/home.css">
+  <link rel="stylesheet" href="../static/css/home.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   
 </head>
@@ -31,16 +31,16 @@
           </div>
         </div>
         <div class="col-md-6 dp">
-          <img src="static/4.jpg" height=450px width=450px>
+          <img src="static/imgs/home/4.jpg" height=450px width=450px>
         </div>
       </div>
     </div>
       <div>
-        <a href="templates/experience.html" class="button">Go to Google</a>
-        <button style="margin:10px 78px;">Experience</button>
-        <button>Education</button>
-        <button style="margin:10px 78px;">Certificates</button>
-        <button>Skills</button>
+        <a style="margin:10px 78px" class="btn btn-secondary btn-lg" href={{url_for('experience')}}  role="button">Experience</a>
+        <a class="btn btn-secondary btn-lg" href={{url_for('education')}} role="button">Education</a>
+        <a style="margin:10px 78px" class="btn btn-secondary btn-lg" href={{url_for('certificates')}} role="button">Certificates</a>
+        <a class="btn btn-secondary btn-lg" href={{url_for('skills')}} role="button">Skills</a>
+
       </div>  
     
   </div>
