--- a/templates/experience.html
+++ b/templates/experience.html
@@ -27,7 +27,7 @@
     <div class="card mb-3">
       <img style= "margin: 0px 225px 0px 225px; width: 500px; height: 300px" src="static/imgs/experience/VSWS.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Computer Vision Engineer Intern</h5>
+        <h5 class="card-title">Web Developer Intern</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit         longer.</p>
       </div>
     </div>
