--- a/templates/home.html
+++ b/templates/home.html
@@ -10,13 +10,13 @@
   
 </head>
   
-<body>
+<body class="bg-secondary">
   <div style="background: #000;">
     <p style="color:red; padding: 5px; text-align:center">Currently in Development Stage!!!</h3>
   </div>
 
   <div id='container'>
-    <h1 class='text-center fw-light name'>Paras Jain</h1>
+    <h1 class='text-center fw-bold border name opacity-90'>Paras Jain</h1>
     <div class="card mb-3">
       <div class="row g-0 intro">
         
@@ -36,9 +36,9 @@
       </div>
     </div>
       <div>
-        <a style="margin:10px 78px" class="btn btn-secondary btn-lg" href={{url_for('experience')}}  role="button">Experience</a>
+        <a style="margin:10px 95px" class="btn btn-secondary btn-lg" href={{url_for('experience')}}  role="button">Experience</a>
         <a class="btn btn-secondary btn-lg" href={{url_for('education')}} role="button">Education</a>
-        <a style="margin:10px 78px" class="btn btn-secondary btn-lg" href={{url_for('certificates')}} role="button">Certificates</a>
+        <a style="margin:10px 95px" class="btn btn-secondary btn-lg" href={{url_for('certificates')}} role="button">Certificates</a>
         <a class="btn btn-secondary btn-lg" href={{url_for('skills')}} role="button">Skills</a>
 
       </div>  
