--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,3 @@
-
 #container{
   max-width: 1000px;
   margin: 0 auto;
@@ -6,6 +5,8 @@
 .name{
   margin-top:10px;
   margin-bottom:20px;
+  color:white;
+  outline-color:red;
 }
 
 .dp{
@@ -27,6 +28,12 @@
   }
   
 }
+
+title{
+  background-color:red;
+}
+
+
 button{
   margin:100vw 100vw 100vw 100vw;
   border:none;
@@ -42,3 +49,4 @@ img{
   border-radius:50%;
   margin:24px 24px 24px 24px;
 }
+
