--- a/templates/experience.html
+++ b/templates/experience.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="../static/css/experience.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+
+  
+<body class="bg-secondary">
   <div id="container">
+    
+    
     <div class="card mb-3">
       <img style="margin-left: 125px; width: 700px" src="static/imgs/experience/KS.png" class="card-img-top" alt="...">
       <div class="card-body">
@@ -17,6 +21,8 @@
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit         longer.</p>
       </div>
     </div>
+    
+    
     <div class="card mb-3">
       <img style="margin: 0px 225px 0px 225px; width: 500px; height: 300px" src="static/imgs/experience/VM.png" class="card-img-top" alt="...">
       <div class="card-body">
@@ -24,6 +30,8 @@
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit         longer.</p>
       </div>
     </div>
+    
+    
     <div class="card mb-3">
       <img style= "margin: 0px 225px 0px 225px; width: 500px; height: 300px" src="static/imgs/experience/VSWS.png" class="card-img-top" alt="...">
       <div class="card-body">
@@ -31,6 +39,8 @@
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit         longer.</p>
       </div>
     </div>
+
+    
   </div>
 </body>
 </html>
