--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,7 +1,7 @@
-#container{
+/* #container{
   max-width: 1000px;
   margin: 0 auto;
-}
+} */
 .name{
   margin-top:10px;
   margin-bottom:20px;
@@ -14,6 +14,38 @@
   align-items:center;
   justify-content:center;
 }
+
+title{
+  background-color:red;
+}
+
+
+/* button{
+  margin:100vw 100vw 100vw 100vw;
+  border:none;
+  color:white;
+  background-color:grey;
+  font-size: 32px;
+  padding:15px 40px;
+  text-align:center;
+  
+} */
+
+img{
+  border-radius:25%;
+  margin:24px 24px 34px 24px;
+}
+
+
+#about{
+  color:white;
+  margin: 90px 25px;
+}
+
+#my-nav{
+  color:white;
+}
+
 
 @media screen and (max-width: 900px) {
   .intro .col-md-8{
@@ -29,24 +61,5 @@
   
 }
 
-title{
-  background-color:red;
-}
 
-
-button{
-  margin:100vw 100vw 100vw 100vw;
-  border:none;
-  color:white;
-  background-color:grey;
-  font-size: 32px;
-  padding:15px 40px;
-  text-align:center;
-  
-}
-
-img{
-  border-radius:50%;
-  margin:24px 24px 24px 24px;
-}
 
