--- a/templates/home.html
+++ b/templates/home.html
@@ -5,44 +5,80 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Paras jain</title>
+
+  <link rel="icon" type="image" href="static/imgs/home/Paras-logo.png">
+
   <link rel="stylesheet" href="../static/css/home.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   
 </head>
-  
-<body class="bg-secondary">
-  <div style="background: #000;">
-    <p style="color:red; padding: 5px; text-align:center">Currently in Development Stage!!!</h3>
-  </div>
 
-  <div id='container'>
-    <h1 class='text-center fw-bold border name opacity-90'>Paras Jain</h1>
-    <div class="card mb-3">
-      <div class="row g-0 intro">
-        
-        <div class="col-md-6" style="margin-top: 100px;">
-          <div class="card-body">
-            <h3 class="card-title">About me</h5>
-            <p class="card-text">I am a flexible and enthusiastic software developer with good presentation skills. I am a driven individual with
-    the ability to adapt to any situation and proven potential to grow myself and others. I am a keen learner and
-    have the ability to remain calm in emergency situations. I value collaboration and am a skilled team player,
-    able to contribute my strengths while also learning from others.</p>
-            
+
+  
+<body class="bg-dark">
+    <div style="background: #000;">
+      <p style="color:red; padding: 5px; text-align:center">Currently in Development Stage!!!</h3>
+    </div>
+
+  
+    <div id="my-nav" class="row">
+      <div id="nav-name" class="col-md-4"><h1>Paras Jain</h1></div>
+      <div id="nav-edu" class="col-md-2"> Education</div>
+      <div id="nav-exp" class="col-md-2">Experience</div>
+      <div id="nav-project" class="col-md-2"> Projects</div>
+      <div id=nav-certificates class="col-md-2">Certificates</div>
+    </div>
+  
+    <div id="introduction">
+  
+    <div id='container'>
+      <!-- <h1 id= "my-name" class='text-center fw-bold border name opacity-90'>Paras Jain</h1> -->
+      
+      <div>
+        <div class="row g-0 intro">
+          
+          <div class="col-md-6" style="margin: 24px 10px 25px 25px;">
+            <div>
+              <h3>About me</h5>
+              <p id="about" class="fs-5">I am a flexible and enthusiastic software developer with good presentation skills. I am a driven 
+                individual with the ability to adapt to any situation and proven potential to grow myself and others. I am a keen learner and have 
+                the ability to remain calm in emergency situations. I value collaboration and am a skilled team player,
+                able to contribute my strengths while also learning from others.</p>
+              
+            </div>
           </div>
-        </div>
-        <div class="col-md-6 dp">
-          <img src="static/imgs/home/4.jpg" height=450px width=450px>
+          
+          <div class="col-md-5 dp">
+            <img src="static/imgs/home/Paras-logo.png" height=450px width=450px>
+          </div>
+          
         </div>
       </div>
-    </div>
-      <div>
+  
+      
+      <!-- <div>
         <a style="margin:10px 95px" class="btn btn-secondary btn-lg" href={{url_for('experience')}}  role="button">Experience</a>
         <a class="btn btn-secondary btn-lg" href={{url_for('education')}} role="button">Education</a>
         <a style="margin:10px 95px" class="btn btn-secondary btn-lg" href={{url_for('certificates')}} role="button">Certificates</a>
         <a class="btn btn-secondary btn-lg" href={{url_for('skills')}} role="button">Skills</a>
-
-      </div>  
-    
+  
+      </div>   -->
+      
+    </div>
   </div>
+
+  
+  <!-- EDUCATION -->
+
+  <div class="text-white">
+    <h1>EDUCATION</h1>
+
+    <div class="row">
+      <h4 id="clg-name" class="col-md-4">Dr. Akhilesh Das Gupta Intitute of technology and Management</h3>
+      
+      
+    </div>
+  </div>
+  
 </body>
 </html>
